go/k8s/concepts/algorithm/leetcode/cka/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: db
          namespaceSelector:
            matchLabels:
              ns: db
      ports:
        - port: 8080
